<resources>
    <string name="app_name">Portfolio Watcher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="stocks">Stocks</string>
    <string name="search_stocks">Search Stocks</string>
    <string name="add_stocks">Add Stock</string>
    <string name="stock_name">Stock Name:</string>
    <string name="stock_cost">Cost:</string>
    <string name="stock_amount">Amount:</string>
    <string name="total">Total:</string>
    <string name="total_value">Value:</string>
    <string name="profit">Profit:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="already_exist">This stock already exists in your portfolio</string>
    <string name="network_error">Check your Internet Connection</string>
    <string name="empt_list_warning_message">You have not added any stocks yet</string>
    <string name="add_stock_error_message">Something went wrong</string>
    <string name="stock_change_detail_header">Change Rates</string>
    <string name="stock_change_weekly_header">Weekly</string>
    <string name="stock_change_monthly_header">Monthly</string>
    <string name="stock_change_yearly_header">Yearly</string>
    <string name="total_percent_header">Percent:</string>
    <string name="total_status_header">general situation</string>

</resources>
