<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/add_stock_dialog_shape">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_stocks"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_regular"
        android:textAllCaps="true"
        android:alpha="0.6"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/stockLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:text="@string/stock_name"
        android:textColor="@color/grey"
        android:fontFamily="@font/lato_regular"
        android:alpha="0.6"
        android:layout_marginStart="30sp"
        android:layout_marginTop="6dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stockNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/stockLabelTextView"
        app:layout_constraintTop_toTopOf="@id/stockLabelTextView"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:alpha="0.6"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/stockCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/stockLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/stockLabelTextView"
        android:layout_marginTop="6dp"
        android:text="@string/stock_cost"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/grey"
        android:alpha="0.6"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/stockCostEditText"
        android:layout_width="160dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="@id/stockNameTextView"
        app:layout_constraintTop_toTopOf="@+id/stockCostTextView"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:paddingStart="5dp"
        android:background="@drawable/edittext_shape"
        android:backgroundTint="@color/screen_background"
        android:fontFamily="@font/lato_regular"
        android:alpha="0.6"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/stockAmauntTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stockCostTextView"
        app:layout_constraintEnd_toEndOf="@id/stockCostTextView"
        android:layout_marginTop="6dp"
        android:text="@string/stock_amount"
        android:textColor="@color/grey"
        android:fontFamily="@font/lato_regular"
        android:alpha="0.6"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/stockAmauntEditText"
        android:layout_width="160dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="@id/stockNameTextView"
        app:layout_constraintTop_toTopOf="@+id/stockAmauntTextView"
        android:inputType="number"
        android:textSize="20sp"
        android:paddingStart="5dp"
        android:background="@drawable/edittext_shape"
        android:backgroundTint="@color/screen_background"
        android:fontFamily="@font/lato_regular"
        android:alpha="0.6"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stockAmauntTextView"
        app:layout_constraintEnd_toEndOf="@id/stockAmauntTextView"
        android:layout_marginTop="6dp"
        android:text="@string/total"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/grey"
        android:alpha="0.6"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/stockTotalTextView"
        android:layout_width="160dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@id/totalTextView"
        app:layout_constraintStart_toStartOf="@id/stockNameTextView"
        android:background="@drawable/edittext_shape"
        android:backgroundTint="@color/screen_background"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_regular"
        android:text="0"
        android:paddingStart="5dp"
        android:alpha="0.6"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockTotalTextView"
        android:layout_marginTop="6dp"
        android:text="@string/add"
        android:fontFamily="@font/lato_bold"
        android:enabled="false"
        android:backgroundTint="@color/green"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/stockTotalTextView"
        android:layout_marginTop="6dp"
        android:text="@string/cancel"
        android:fontFamily="@font/lato_bold"
        android:backgroundTint="@color/red"/>


</androidx.constraintlayout.widget.ConstraintLayout>
