<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:background="@drawable/recycler_item_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/arrow_icon_portfolio"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/stockNameTextViewPortfolio"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrow_icon_portfolio"
        android:text="THYAO"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/stockNameDetailTextViewPortfolio"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockNameTextViewPortfolio"
        app:layout_constraintStart_toStartOf="@+id/stockNameTextViewPortfolio"
        android:text="Türk Hava Yolları"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/stockAmountTextViewPortfolio"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockNameDetailTextViewPortfolio"
        app:layout_constraintStart_toEndOf="@+id/stockAmountLabel"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:text="5"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/stockAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockNameDetailTextViewPortfolio"
        app:layout_constraintStart_toStartOf="@+id/stockNameTextViewPortfolio"
        android:text="@string/stock_amount"
        android:textSize="15sp" />



    <TextView
        android:id="@+id/stockCostTextViewPortfolio"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockAmountTextViewPortfolio"
        app:layout_constraintStart_toEndOf="@+id/stockCostLabel"
        android:text="1000.23"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/stockCostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockAmountTextViewPortfolio"
        app:layout_constraintStart_toStartOf="@+id/stockNameTextViewPortfolio"
        android:text="@string/stock_cost"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/stockLastValueTextViewPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox"
        android:text="123,123"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/stockChangeTextViewPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockLastValueTextViewPortfolio"
        app:layout_constraintEnd_toEndOf="@+id/stockLastValueTextViewPortfolio"
        android:text="%1,12"
        android:textSize="16sp"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/stockCurrentValueTextViewPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockChangeTextViewPortfolio"
        app:layout_constraintEnd_toEndOf="@+id/stockLastValueTextViewPortfolio"
        android:text="1500.12"
        android:textSize="16sp"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/stockLastValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/stockCurrentValueTextViewPortfolio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/stockCurrentValueTextViewPortfolio"
        android:layout_marginEnd="135dp"
        android:text="@string/total_value"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/stockCProfitTextViewPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stockCurrentValueTextViewPortfolio"
        app:layout_constraintEnd_toEndOf="@+id/stockLastValueTextViewPortfolio"
        android:text="1500.12"
        android:textSize="16sp"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/stockProfitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/stockCProfitTextViewPortfolio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/stockCProfitTextViewPortfolio"
        android:layout_marginEnd="135dp"
        android:text="@string/profit"
        android:textSize="15sp" />


</androidx.constraintlayout.widget.ConstraintLayout>
